@@ -176,6 +176,7 @@ changes to languages because of Bugzilla reports.
   have since become subclasses of the Action class. (deprecated since 1.19)
 * SearchEngineReplacePrefixesComplete hook was removed.
 * Removed HTMLForm::addJS(). (deprecated since 1.18)
+* Removed ImageGalleryBase::useSkin(). (deprecated since 1.18)
 
 ==== Renamed classes ====
 * CLDRPluralRuleConverter_Expression to CLDRPluralRuleConverterExpression
